--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@types/uuid": "^8.3.0",
+    "angular-bootstrap-md": "^11.1.0",
     "firebase": "^8.5.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
