--- a/package.json
+++ b/package.json
@@ -22,9 +22,15 @@
     "@angular/platform-browser": "~11.0.1",
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
+    "@swimlane/ngx-charts": "^18.0.1",
     "@types/uuid": "^8.3.0",
     "angular-bootstrap-md": "^11.1.0",
+    "apexcharts": "^3.26.2",
+    "chart.js": "^2.9.4",
     "firebase": "^8.5.0",
+    "highcharts": "^9.1.0",
+    "ng-apexcharts": "^1.5.9",
+    "ng2-charts": "^2.4.2",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
