--- a/package.json
+++ b/package.json
@@ -23,14 +23,16 @@
     "@angular/platform-browser-dynamic": "~11.0.1",
     "@angular/router": "~11.0.1",
     "@swimlane/ngx-charts": "^18.0.1",
+    "@types/chart.js": "^2.9.32",
     "@types/uuid": "^8.3.0",
     "angular-bootstrap-md": "^11.1.0",
     "apexcharts": "^3.26.2",
-    "chart.js": "^2.9.4",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^1.0.1",
     "firebase": "^8.5.0",
     "highcharts": "^9.1.0",
     "ng-apexcharts": "^1.5.9",
-    "ng2-charts": "^2.4.2",
+    "ng2-charts": "^2.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
